IMPORTANT security fix / comments commented out
Comments aren't ready yet so I commented them out. This repo is ready to be pushed completely to the pythonanywhere

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -4,6 +4,10 @@
 <div class="container-fluid">
     <p class="h1">Dashboard</p>
     <p>Hello {{ user['name'] }}, welcome to the Admin console.</p>
+
+
+    <p class="h3">Database</p>
+    <a href="dashboard/migrate" class="btn btn-primary">Migrate</a>
 </div>
 
 {% endblock %}
